2011-08-10  6.7.1-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.1-5.
	
2011-08-10  6.7.1-5 Cristy  <quetzlzacatenango@image...>
  * Revert -colorspace sRGB option patch (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19256).

2011-08-09  6.7.1-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.1-4.

2011-08-09  6.7.1-4 Cristy  <quetzlzacatenango@image...>
  * Revert MultiByteToWideChar() for Windows patch.

2011-08-05  6.7.1-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.1-3.

2011-08-05  6.7.1-3 Cristy  <quetzlzacatenango@image...>
  * Use MultiByteToWideChar() for Windows filenames (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19242).

2011-08-03  6.7.1-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.1-2.

2011-08-02  6.7.1-2 Cristy  <quetzlzacatenango@image...>
  * Windows does not support acosh(), asinh(), or atanh().
  * Accept filenames with time stamps and a sub-image specification (e.g.
    test-18:37.jpg[0]).

2011-08-01  6.7.1-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.1-1.

2011-08-01  6.7.1-1 Cristy  <quetzlzacatenango@image...>
  * Support MSL 'set gravity' element.
  * Don't report HSB colors as RGB colornames (e.g. hsb(0%,0%,100%)).
  * Support -fx acosh(), asinh(), and atanh().

2011-07-21  6.7.1-0 Anthony Thyssen <A.Thyssen@griffith...>
  * Removed a case that prevented rotations of rectangle kernels.

2011-07-01  6.7.1-0 Glenn Randers-Pehrson <glennrp@image...>
  * Use zlib default compression strategy instead of Z_RLE and Z_FIXED
    strategies when linking with zlib versions (prior to 1.2.0 and 1.2.2.2,
    respectively) that don't support them.
  * Exit test loop sooner in coders/png.c when a non-gray pixel is found.

2011-06-30  6.7.0-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-10.

2011-06-30  6.7.0-10 Glenn Randers-Pehrson <glennrp@image...>